2022-02-13  Matt Woodrow  <mattwoodrow@apple.com>

        Add support for parsing 'subgrid' in grid-template-columns/row
        https://bugs.webkit.org/show_bug.cgi?id=236054

        Reviewed by Manuel Rego Casasnovas.

        Adds a new experimental preference for subgrid support, disabled by default.

        * Scripts/Preferences/WebPreferencesExperimental.yaml:

2022-02-13  Brady Eidson  <beidson@apple.com>

        Implement ServiceWorkerRegistration.showNotification()
        https://bugs.webkit.org/show_bug.cgi?id=22722

        Reviewed by Chris Dumez.

        * Scripts/Preferences/WebPreferencesInternal.yaml:

2022-02-12  Jer Noble  <jer.noble@apple.com>

        Add settings to restrict media containers and codecs when in Captive Portal mode
        https://bugs.webkit.org/show_bug.cgi?id=236245

        Reviewed by Eric Carlson.

        * Scripts/Preferences/WebPreferences.yaml:

2022-02-12  Eric Carlson  <eric.carlson@apple.com>

        [macOS] Use system window and screen picker when available
        https://bugs.webkit.org/show_bug.cgi?id=236531
        rdar://87111816

        Reviewed by Jer Noble.

        * wtf/PlatformHave.h: Define HAVE_SC_CONTENT_SHARING_SESSION.

2022-02-11  Nikolaos Mouchtaris  <nmouchtaris@apple.com>

        Turn overscroll-behavior on by default
        https://bugs.webkit.org/show_bug.cgi?id=236060

        Reviewed by Tim Nguyen.

        * Scripts/Preferences/WebPreferencesExperimental.yaml:

2022-02-11  Wenson Hsieh  <wenson_hsieh@apple.com>

        [iOS] Add a "Copy Cropped Image" context menu item when long pressing images
        https://bugs.webkit.org/show_bug.cgi?id=236511
        rdar://88817219

        Reviewed by Devin Rousso.

        Add a compile-time flag to guard availability of the UniformTypeIdentifiers framework. See WebKit/ChangeLog for
        more information.

        * wtf/PlatformHave.h:

2022-02-11  Don Olmstead  <don.olmstead@sony.com>

        [CMake] Check for MAP_ALIGNED support